c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/unterminated_string.c
int main(void) {
    char *ptr = "foo\";
    return 0;
}